# ivanbot

./: CHANGES.MD  Cargo.toml  Dockerfile  README.md
.github/workflows/: docker-image.yml
src/: config.rs  connect.rs  credentials.rs  discord.rs  help.rs  main.rs  management.rs  model.rs  output.rs  parsing.rs  pavlov.rs  permissions.rs  voting.rs
