[package]
name = "ivanbot"
version = "0.6.0"
authors = ["Ramon Eelman <ramon@ramoneelman.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
md5 = "0.7.0"
hex = "0.3.1"
regex = "1.3.9"
serenity = "0.8.6"

serde = "1.0.123"
rand = "0.7.3"
derive_more = "0.99.9"

dirs = "3.0.1"
serde_json = "1.0.57"
rust-embed="5.8.0"

[dependencies.threadpool]
version = "1.8.1"

